Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45137

QStorageInfo: bytesAvailable(), bytesFree(), bytesTotal() are calculated incorrectly on Unix systems

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.2, 5.5.0
    • 5.4.1, 5.5.0 Alpha
    • Core: I/O
    • None
    • Fedora 21 x86_64 (Linux 3.18)
    • 02e448784543df2d81135ac583c39df6237dac69

      struct statvfs contains a not exactly intuitive quirk: the f_blocks, f_bfree and f_bavail members refer to the number of fundamental blocks ("fragments"), whose size is given in f_frsize and not, as one might guess, in f_bsize. To make matters worse, f_bsize is often equal to f_frsize, except when it isn't (e.g. on a tmpfs).

      Qt gets it wrong.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            rgcjonas Jonas Kümmerlin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes